[package]
name = "polars_robust_se"
version = "0.1.2"
edition = "2021"

[lib]
name = "polars_robust_se"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.13", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.39", features = ["lazy", "dtype-struct"] }
ndarray = "0.16"
statrs = "0.18"
